--- a/assets/app.css
+++ b/assets/app.css
@@ -408,7 +408,34 @@ padding-inline: 1rem;
 .TITLE-CARD-STYLE{
     WIDTH: 100%;
     height: 70px;
-    background: #8c8cf9;
+    background:#EFBFD0;/* #8c8cf9;*/
+    display: flex;
+    border-top-left-radius: 0.75rem;
+    border-top-right-radius: 0.75rem;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    position: relative;
+}
+.TITLE-CARD-STYLE2{
+    WIDTH: 100%;
+    height: 70px;
+    background:#EE9BB7;/* #8c8cf9;*/
+    display: flex;
+    border-top-left-radius: 0.75rem;
+    border-top-right-radius: 0.75rem;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    position: relative;
+}
+
+.TITLE-CARD-STYLE3{
+    WIDTH: 100%;
+    height: 70px;
+    background:#E6799E;/* #8c8cf9;*/
     display: flex;
     border-top-left-radius: 0.75rem;
     border-top-right-radius: 0.75rem;
@@ -498,7 +525,59 @@ padding-inline: 1rem;
     padding-inline: 1rem 1rem;
     width: 100%;
     border-radius: 9999px;
-    background: #8c8cf9;
+    background:#EFBFD0;
+    color: #ffffff;
+}
+.button-sty2{
+    display: flex;
+    appearance: none;
+    align-items: center;
+    -webkit-box-align: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    user-select: none;
+    position: relative;
+    white-space: nowrap;
+    vertical-align: middle;
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+    line-height: 1.2;
+    font-weight: 500;
+   /* transition-property: ;*/
+    transition-duration:5s;
+    height: 2.5rem;
+    min-height: 2.5rem;
+    font-size: 1rem;
+    padding-inline: 1rem 1rem;
+    width: 100%;
+    border-radius: 9999px;
+    background: #EE9BB7;
+    color: #ffffff;
+}
+.button-sty3{
+    display: flex;
+    appearance: none;
+    align-items: center;
+    -webkit-box-align: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    user-select: none;
+    position: relative;
+    white-space: nowrap;
+    vertical-align: middle;
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+    line-height: 1.2;
+    font-weight: 500;
+   /* transition-property: ;*/
+    transition-duration:5s;
+    height: 2.5rem;
+    min-height: 2.5rem;
+    font-size: 1rem;
+    padding-inline: 1rem 1rem;
+    width: 100%;
+    border-radius: 9999px;
+    background: #E6799E;
     color: #ffffff;
 }
 .price-details{
